--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,18 +23,28 @@ find_package(sensor_msgs REQUIRED)
 find_package(geometry_msgs REQUIRED)
 find_package(rosbag2 REQUIRED)
 
-add_executable(ros2_parsing_test src/ros2_msg_parsing.cpp)
-target_include_directories(ros2_parsing_test PUBLIC
+
+add_library(${PROJECT_NAME} src/ros2_introspection.cpp)
+target_include_directories(${PROJECT_NAME} PUBLIC
   $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
   $<INSTALL_INTERFACE:include>)
-
-ament_target_dependencies(ros2_parsing_test
+ament_target_dependencies(${PROJECT_NAME}
   rcpputils
   sensor_msgs
   geometry_msgs
   rmw_fastrtps_cpp
   rosbag2
 )
+
+#------------------
+add_executable(ros2_parsing_test
+    src/ros2_msg_parsing.cpp
+    src/stringtree.cpp
+    )
+target_include_directories(ros2_parsing_test PUBLIC
+  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
+  $<INSTALL_INTERFACE:include>)
+target_link_libraries(ros2_parsing_test ${PROJECT_NAME})
 
 install(TARGETS ros2_parsing_test
   EXPORT export_${PROJECT_NAME}
