fix some dependancies

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,6 +22,8 @@ find_package(rmw_fastrtps_cpp REQUIRED)
 find_package(sensor_msgs REQUIRED)
 find_package(geometry_msgs REQUIRED)
 find_package(rosbag2 REQUIRED)
+find_package(rclcpp REQUIRED)
+find_package(Boost REQUIRED COMPONENTS container)
 
 add_library(${PROJECT_NAME}
     src/ros2_introspection.cpp
@@ -32,6 +34,7 @@ target_include_directories(${PROJECT_NAME} PUBLIC
   $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
   $<INSTALL_INTERFACE:include>)
 ament_target_dependencies(${PROJECT_NAME}
+  rclcpp
   rcpputils
   sensor_msgs
   geometry_msgs
@@ -46,7 +49,7 @@ add_executable(ros2_parsing_test
 target_include_directories(ros2_parsing_test PUBLIC
   $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
   $<INSTALL_INTERFACE:include>)
-target_link_libraries(ros2_parsing_test ${PROJECT_NAME} gtest gtest_main)
+target_link_libraries(ros2_parsing_test ${PROJECT_NAME} gtest gtest_main Boost::container)
 
 install(TARGETS ros2_parsing_test
   EXPORT export_${PROJECT_NAME}
