--- a/package.xml
+++ b/package.xml
@@ -14,6 +14,9 @@
     <depend>sensor_msgs</depend>
     <depend>geometry_msgs</depend>
     <depend>rmw_fastrtps_cpp</depend>
+    <depend>rclcpp</depend>
+    <depend>boost</depend>
+    <depend>gtest</depend>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
